# note_API

./: .env  README.MD  pyproject.toml  requirements.txt
backend/: alembic.ini  main.py  run_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0fe0f891a5ff_corrected_class_note.py  1053b59e3008_final_create1.py  1140aa684f64_init_last_db5.py  25.03.2023db_initial_revision.py  250b355692dc_corrected_note.py  2f4470c25cf2_init_last_db.py  325f5bc8106d_corrected_models_user2.py  3eb4e4c1f168_corrected_models_user1.py  4683e37e04ec_init_last_db4.py  46b53ef849f1_4_corrected.py  5b40468a48eb_finally_correct.py  677031f8b672_corrected_models_user.py  6a8d750fac3c_corrected_class_note2.py  6acc2b8276d2_third_corrected.py  704324ed9b85_final_create.py  723536b80af0_last_corrected.py  77c02a240ecc_init_last_db3.py  855aba0f9ad3_corrected_once_more.py  8686a9589b56_init_db.py  8dfeb49f788c_6_corrected.py  b158918034b1_corrected_moduls.py  b514d3ae0c35_corrected_class_note1.py  b584c4c606c3_update_db.py  b973689ec664_corrected_models_finaly.py  ca7ae2fdf411_5_corrected.py  f80ae29537ab_init_last_db1.py
backend/app/api/: api.py
backend/app/core/: config.py  security.py
backend/app/crud/: note.py  user.py
backend/app/db/: base.py  base_class.py  db_setup.py  init_db.py  session.py
backend/app/models/: mixin.py  note.py  role.py  user.py
backend/templates/: authenticated.html  home.html  login.html  note.html  notes.html  register.html  update_note.html
backend/tests/: note_test.py  user_test.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
(+6 files in other folders)
